<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_tag_view_tag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_tag"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/add_tag_view_tag_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:text="@string/empty_string" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/add_tag_view_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:text="@string/save_verb" />

</LinearLayout>