<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_view_meal_result_item_view"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="onClick"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/search_view_meal_result_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left"
        android:text="@string/date_noun"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/search_view_meal_result_item_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:text="@string/carbs_noun"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/search_view_meal_result_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/food_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>