<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/add_place_view_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_input_hint"
        android:inputType="textCapSentences"
        android:text="@string/empty_string" >

        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/add_place_view_address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/add_place_view_latitude_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/add_place_view_longitude_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_place_view_map_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/add_place_view_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:text="@string/save_verb" />

</LinearLayout>